kspo 168 upload 작업

--- a/public/168_kspo/main copy.html
+++ b/public/168_kspo/main copy.html
@@ -17,13 +17,13 @@
       <tr>
         <td>
           <img
-            src="https://godjewel.co.kr/167_kspo/src/main/KSPO_167_0 (2).png"
+            src="https://godjewel.co.kr/168_kspo/src/main/KSPO168_m (2).png"
             alt="뉴스레터 상단"
             style="display: block"
             width="730"
           />
           <img
-            src="https://godjewel.co.kr/167_kspo/src/main/KSPO_167_0 (3).png"
+            src="https://godjewel.co.kr/168_kspo/src/main/KSPO168_m (3).png"
             usemap="#map"
             alt="뉴스레터 하단"
             style="display: block"
@@ -34,55 +34,55 @@
               shape="rect"
               alt=""
               title=""
-              coords="281,365,452,411"
-              href="https://spobiz.kspo.or.kr/front/www/trend/view.do?board_id=30002&topMenuSeq=3&notice_seq=4568"
+              coords="275,356,457,409"
+              href="card/01.html"
               target="_blank"
             />
             <area
               shape="rect"
-              alt=""
+              alt="스포츠굿즈서비스"
               title=""
-              coords="383,811,458,846"
-              href="https://spobiz.kspo.or.kr/front/www/trend/view.do?board_id=30002&topMenuSeq=3&notice_seq=4569"
+              coords="45,826,121,868"
+              href="card/02.html"
               target="_blank"
             />
             <area
               shape="rect"
               alt="*"
               title="선도기업 성과사례"
-              coords="44,1271,116,1301"
-              href="https://spobiz.kspo.or.kr/front/www/trend/view.do?board_id=30002&topMenuSeq=3&notice_seq=4570"
+              coords="356,1260,442,1301"
+              href="card/03.html"
               target="_blank"
             />
             <area
               shape="rect"
               alt="*"
               title="이슈페이퍼"
-              coords="434,1699,512,1730"
-              href="https://www.sports.re.kr/front/spobiz/spobizContents_view.do?menu_seq=993&pageNo=1&boardCode=IS&noticeSeq=4542&keyKind=ALL&keyWord="
+              coords="486,1653,567,1695"
+              href="card/04.html"
               target="_blank"
             />
             <area
               shape="rect"
               alt="*"
               title="SI포커스"
-              coords="43,2149,122,2183"
-              href="https://www.sports.re.kr/front/spobiz/spobizContents_view.do?menu_seq=991&pageNo=1&keyKind=&boardCode=SI&noticeSeq=4543&keyWord="
+              coords="50,2126,132,2166"
+              href="card/05.html"
               target="_blank"
             />
             <area
               shape="rect"
               alt="*"
               title=""
-              coords="419,2580,487,2614"
-              href="https://spobiz.kspo.or.kr/front/www/trend/view.do?board_id=30002&topMenuSeq=3&notice_seq=4571"
+              coords="402,2583,482,2614"
+              href="card/06.html"
               target="_blank"
             />
             <area
               shape="rect"
               alt=""
               title="한국스포츠정책과학원"
-              coords="501,2777,567,2847"
+              coords="492,2773,570,2854"
               href="https://spobiz.kspo.or.kr/front/index.do"
               target="_blank"
             />
@@ -90,7 +90,7 @@
               shape="rect"
               alt=""
               title="인스타그램"
-              coords="578,2776,649,2848"
+              coords="576,2775,649,2852"
               href="https://www.instagram.com/kspo_newsletter/"
               target="_blank"
             />
@@ -98,16 +98,8 @@
               shape="rect"
               alt=""
               title=""
-              coords="533,3107,707,3164"
-              href="https://www.instagram.com/p/Cz9tzDVPmvw/"
-              target="_blank"
-            />
-            <area
-              shape="rect"
-              alt=""
-              title=""
-              coords="1,3182,727,3435"
-              href="https://www.instagram.com/p/Cz8UscepxuM/"
+              coords="21,3088,199,3149"
+              href="https://url.kr/6yg1ba"
               target="_blank"
             />
           </map>
