--- a/public/168_kspo/upload/01.html
+++ b/public/168_kspo/upload/01.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>[vol.167] 2023 스포츠 비즈니스 어워드</title>
+    <title>[vol.168] 2023 세계에서 가장 혁신적인 스포츠 기업</title>
 
     <style type="text/css">
       .spobiz_css {
@@ -269,144 +269,148 @@
   <body>
     <div class="spobiz_css">
       <img
-        src="https://spobiz.kspo.or.kr/images/newsletter/20231123/sub/KSPO167_0 (1).png"
+        src="https://spobiz.kspo.or.kr/images/newsletter/20231214/sub/KSPO168_0 (1).png"
         alt="1번"
       />
       <br /><br />
 
       <span class="txt_jew"
-        >2008년부터 시작된 스포츠 비즈니스 대상은 스포츠 비즈니스의 우수성을
-        기념하기 위해 스포츠 비즈니스 저널에서 주최하여 매년 열리고 있습니다.
-        스포츠 비즈니스 저널에서는 스포츠 시장 내의 각 분야에서 좋은 성과를
-        거두고 영향력이 있는 스포츠 기업을 선정해 분야별 수상을 하고 있는데요.
-        이번 호에서는 2023년 스포츠 비즈니스 어워드의 수상기업을 알아볼까요?
+        >스포츠 기업들은 기술의 발전과 함께 끊임없이 성장하고 있으며, 스포츠를
+        통한 즐거움을 소비자들이 느낄 수 있도록 많은 노력을 기울이고 있습니다.
+        ISPO, Fastcompany, Medium.com 등에서는 스포츠 시장의 혁신적인 기업들을
+        소개하고 있는데요. 어떤 기업들이 있는지 함께 알아볼까요?
       </span>
       <br />
       <span class="txt_jew_comment" style="text-align: right">
-        출처: sportsbusinessjournal.com
+        출처 – ispo.com, medium.com, fastcompany.com
       </span>
 
       <br /><br /><br />
       <!-- 기업들 등장 -->
-      <h2>2023 스포츠 소셜 미디어 부문 수상기업</h2>
+      <h2>2023 세계에서 가장 혁신적인 스포츠 기업</h2>
       <img
-        src="https://spobiz.kspo.or.kr/images/newsletter/20231123/sub/KSPO167_0 (2).png"
+        src="https://spobiz.kspo.or.kr/images/newsletter/20231214/sub/KSPO168_0 (2).png"
         alt="2번"
       />
       <br /><br />
       <span class="txt_jew"
-        >Bleacher Report <br />애니메이션과 스포츠를 결합한 Hero ball은 Bleacher
-        Report의 시청자들에게 많은 인기를 끌었습니다. 처음 출시한 3가지의
-        에피소드에서 각각 천만 회 이상의 조회수를 기록하였고 제공된 컨텐츠는
-        창의성, 예술성, 스포츠가 독특하게 혼합되어 있다는 평가를 받았죠. Hero
-        ball에는 약 30명의 작가, 아티스트, 프로듀서, 성우 등으로 구성된 팀이
-        참여하여 각 에피소드 별로 2,500여 시간의 작업을 하였고 NBA 최고의 온라인
-        크리에이터인 Kenny Beecham과의 협업을 통해 마케팅 효과를 극대화
-        시켰습니다. </span
+        >Fanatics <br />미국 기업인 Fanatics는 최근 몇 년 동안 NBA, NFL 등 미국
+        유명 프로리그의 팬 상품을 판매하고 있습니다. 유니폼 판매, 스포츠 구단의
+        굿즈 판매 등 클래식한 수익모델을 바탕으로 성장해 왔지만 트레이딩카드를
+        제작하면서 인상적으로 수익모델을 확장했다는 평을 받고 있는데요.
+        트레이딩카드 제조사에서 독보적인 1위를 달리고 있던 Topps와 비교했을 때도
+        뒤처지지 않는 결과를 나타내며 성공적으로 시장에 진입하였습니다. 또한
+        힙합 가수인 Jay-Z와의 파트너십으로 스포츠 베팅 부문에도 진출하였고
+        2021년부터는 MLB로부터 독점권을 부여받아 회사 자체에서 NFT프로젝트인
+        Candy digital을 출범시켰습니다. </span
       ><br />
 
       <!-- 7위 -->
       <br /><br /><br />
-      <h2>2023 스포츠 베팅 부문</h2>
+      <h2>2023 세계에서 가장 혁신적인 스포츠 기업</h2>
       <img
-        src="https://spobiz.kspo.or.kr/images/newsletter/20231123/sub/KSPO167_0 (3).png"
+        src="https://spobiz.kspo.or.kr/images/newsletter/20231214/sub/KSPO168_0 (3).png"
         alt="2번"
       />
       <br /><br />
       <span class="txt_jew"
-        >Fan Duel <br />2022년 미국 스포츠 베팅 기업 중 가장 선두 주자라고 할 수
-        있는 FanDuel은 NFL 선수인 롭 그론카우스키가 출연하여 필드킥을 시도하는
-        Kick of Destiny 캠페인을 기획하여 큰 성과를 거두었습니다. 뉴욕에 본사를
-        두고 있는 FanDuel은 다양한 캠페인으로 고객의 참여를 유도하여 수익성을
-        확보하였고 OTT 플랫폼과의 협업을 통해 소비자에게 직접 판매되는 형식으로
-        광고하여 고객 확보 비용을 줄여 수익률을 높였다는 평가를
-        받았습니다.</span
+        >Mojo sports<br />청소년 스포츠 참여는 장기간 감소세를 보이고 있으며
+        스포츠 참여를 시작한 어린이 중 약 60%의 참여자가 청소년기에는 스포츠
+        활동을 더 이상 하지 않는 것으로 나타났습니다. Mojo sports는 청소년들에게
+        스포츠에 대한 흥미를 유발하고 스포츠 참여율을 높이기 위해 비디오
+        게임으로 참여를 유도하고 있는데요. 스포츠를 더 많이 참여할수록 Mojo
+        sports가 제공하는 게임에서 많은 보상을 얻을 수 있으며 얻어진 보상으로
+        실제 전문 코치를 통한 해당 스포츠 훈련 프로그램을 제공받을 수 있습니다.
+        Mojo sports에서 제공하는 서비스의 이용자는 2022년 기준 전년 대비 약 두
+        배가량 증가하였습니다.</span
       ><br />
 
       <br /><br /><br />
       <!-- 6위 -->
-      <h2>스포츠 이벤트 부문</h2>
+      <h2>2023 세계에서 가장 혁신적인 스포츠 기업</h2>
       <img
-        src="https://spobiz.kspo.or.kr/images/newsletter/20231123/sub/KSPO167_0 (4).png"
+        src="https://spobiz.kspo.or.kr/images/newsletter/20231214/sub/KSPO168_0 (4).png"
         alt="2번"
       />
       <br /><br />
       <span class="txt_jew"
-        >U.S 오픈<br />
-        U.S 오픈 토너먼트 시청률은 2021년대비 50% 이상 증가하였고 ESPN에서 세
-        번째로 높은 시청률을 기록하였는데요. U.S 오픈은 2주간의 행사 기간에 약
-        776,000명의 관중이 모이는 출석률도 기록했습니다. 또한 세레나 윌리엄스가
-        참여하는 U.S 오픈 마지막 대회가 될 가능성이 있어 그 화제성도 한층
-        부각되었다는 평가를 받았습니다. </span
+        >STRAVA<br />
+        STRAVA는 마라톤을 즐기거나 자전거를 타는 사람들의 목표달성을 돕기 위해
+        개발된 모바일 어플리케이션으로, GPS를 통해 코스 정보를 공유하고 사용자
+        데이터를 활용해 비슷한 수준의 사용자들을 연결해 줍니다. <br />연결된
+        사용자들은 경쟁을 통해 기록을 측정하고 목표를 향상할 수 있으며 코스에서
+        추적을 할 수 있게 정보도 제공하고 있는데요. STRAVA는 스포츠 어플리케이션
+        시장에서 높은 점유율 성장세를 보이며 추가적인 서비스도 기획하고
+        있습니다.</span
       ><br />
 
       <br /><br /><br />
       <!-- 5위 -->
-      <h2>스포츠 미디어 부문</h2>
+      <h2>2023 세계에서 가장 혁신적인 스포츠 기업</h2>
       <img
-        src="https://spobiz.kspo.or.kr/images/newsletter/20231123/sub/KSPO167_0 (5).png"
+        src="https://spobiz.kspo.or.kr/images/newsletter/20231214/sub/KSPO168_0 (5).png"
         alt="2번"
       />
       <br /><br />
       <span class="txt_jew"
-        >Fox Sports <br />미국에서 가장 인기 있는 스포츠 이벤트인 슈퍼볼(NFL),
-        월드시리즈(MLB)부터 FIFA월드컵까지 Fox Sports에서 중계하였습니다. Fox
-        스포츠는 많은 전문가에게 호평받은 새로운 방송 부스를 통해 획기적인
-        이벤트를 기획하고 실행하며 시청률을 증가시켰다는 평가를 받았는데요. 기업
-        간의 거래에서도 스포츠 저널인 Big Ten과 권리 계약을 체결한 후 CBS와
-        NBC에 대한 권리를 판매하였습니다. </span
+        >VERSUS<br />VERSUS는 2022년 세인트루이스 카디널스 감독 올리버 마몰과
+        그의 아내이자 기업가인 앰버에 의해 설립된 교육회사입니다. VERSUS의
+        어플리케이션에서는 야구, 축구, 프로소프트볼 등에서 세계적인 선수들의
+        교육영상을 제공하고 사용자와 상호작용을 할 수 있도록 AI 시스템도 갖추고
+        있는데요. 영상에서 등장하는 선수들은 인터뷰를 통해 최소 600개의 질문에
+        대한 답변을 하고 있으며 스포츠 관련 기술을 전달 할 뿐만 아니라
+        운동선수가 가져야 할 심리적인 부분에 대한 정보도 제공하고 있습니다. 현재
+        14명의 운동선수가 약 4,700개 이상의 교육을 제공하고 있으며 향후 더 많은
+        교육프로그램을 제공하기 위해 노력하고 있습니다. </span
       ><br />
 
       <br /><br /><br />
-      <h2>스포츠 스폰서십 부문</h2>
+      <h2>2023 세계에서 가장 혁신적인 스포츠 기업</h2>
       <img
-        src="https://spobiz.kspo.or.kr/images/newsletter/20231123/sub/KSPO167_0 (6).png"
+        src="https://spobiz.kspo.or.kr/images/newsletter/20231214/sub/KSPO168_0 (6).png"
         alt="2번"
       />
       <br /><br />
       <span class="txt_jew"
-        >T-Mobile(미국) <br />T-Mobile은 MLB 네트워크와 제휴하여 5G 연결
-        스마트폰에서 5G 네트워크를 통해 HD로 촬영된 홈런 더비쇼 인 T-Mobile의
-        5GBP를 제작하였습니다. 여러 대의 5G 기반 카메라가 타격 연습 중의 현장을
-        보다 생생하게 중계하여 팬들에게 올스타 이벤트 전의 축제를 한층 더 현장감
-        있게 볼 수 있도록 서비스를 제공하였죠. 또한 스포츠 중계업체인 GoDog
-        Sports와 협력하여 100여 개의 구장에 5G 연결 카메라를 장착하여 유소년
-        리그의 경기를 어디서든 시청할 수 있게 시스템을 구축하였습니다.
-        T-Mobile은 향후 3년 동안 기술에 대한 솔루션에 약 천만 달러(한화 약
-        135억원) 이상을 투자할 예정입니다. </span
+        >Surfline<br />서핑에서는 파도가 가장 중요합니다. 장비가 좋더라도 파도가
+        없으면 무용지물이 되는데요. Surfline에서는 서핑에 최적인 장소를 찾기
+        위해 예측 모형을 통해 장소에 대한 정보를 제공합니다. 정보를 제공하기
+        위해 800개 이상의 서핑장소에서 실시간 영상을 확인하고 머신러닝 기법을
+        적용하여 파도의 높이, 서핑 시간, 바람의 진행상황 등을 매일 예측하고
+        있는데요. Surfline의 유료가입자 수는 2021년 대비 2022년 약 40% 가
+        증가하였고 수익은 약 25% 증가하였습니다. </span
       ><br />
 
       <br /><br /><br />
-      <h2>스포츠 시설 부문</h2>
+      <h2>2023 세계에서 가장 혁신적인 스포츠 기업</h2>
       <img
-        src="https://spobiz.kspo.or.kr/images/newsletter/20231123/sub/KSPO167_0 (7).png"
+        src="https://spobiz.kspo.or.kr/images/newsletter/20231214/sub/KSPO168_0 (7).png"
         alt="2번"
       />
       <br /><br />
       <span class="txt_jew"
-        >팬웨이 파크(Fenway Park) <br />100년이 넘는 역사를 가진 펜웨이 파크
-        구장은 2022년 NHL의 Winter Classic의 개최한 것을 포함하여 438개의
-        이벤트를 개최하였습니다. 이는 보스턴 레드삭스의 홈구장인 펜웨이 파크의
-        오프시즌에 더 많은 이벤트를 개최하기 위해 초점을 맞추어 경기장을 운영한
-        결과라고 평가받는 중이죠. 이러한 이벤트를 통해 경기장을 찾은 팬은 약
-        13여 만 명이 늘어났습니다. 또한 펜웨이 파크는 2022년 탄소중립 야구장으로
-        선정되며 온실가스와 쓰레기 등의 배출을 줄이기 위해 많은 노력을 기울이고
-        있습니다. </span
+        >Gym class<br />Gym class는 VR을 사용한 농구 시뮬레이터입니다.
+        네트워크를 통해 전 세계 사용자들과 농구를 즐기고 VR 스포츠 커뮤니티에서
+        서로의 기록을 비교할 수 있는데요. 가상현실 농구를 이용해 실제 슈팅,
+        패스, 드리블 기술을 사용하면서 농구와 관련된 스킬을 습득할 수 있으며
+        실력을 향상시킬 수 있습니다. </span
       ><br />
 
       <br /><br /><br />
-      <h2>올해의 스포츠팀</h2>
+      <h2>2023 세계에서 가장 혁신적인 스포츠 기업</h2>
       <img
-        src="https://spobiz.kspo.or.kr/images/newsletter/20231123/sub/KSPO167_0 (8).png"
+        src="https://spobiz.kspo.or.kr/images/newsletter/20231214/sub/KSPO168_0 (8).png"
         alt="2번"
       />
       <br /><br />
       <span class="txt_jew"
-        >Angel City FC <br />Angel City는 북미에서 가장 인기 있는 여성
-        스포츠팀입니다. Angel City F.C는 NWSL(National Woman Soccer League)에서
-        1억 달러 이상의 가치를 가지고 있다고 평가받으며 투자자를 유치하였고
-        NWSL의 전체 수익 중 약 38.75%를 차지하였죠. 게임 평균 19,000명의 관중을
-        동원하고 있으며 상품 판매 부문에서 리그 1위를 차지했습니다.</span
+        >Carbon<br />3D 프린팅 기술 전문 브랜드인 Carbon은 스포츠 제품을
+        제작하고 있습니다. 이미 Adidas에서는 신발에 3D 프린팅 요소를 사용하였고
+        자전거 용품업체인 Fizik은 Carbon에서 제작한 자전거 안장을 사용하고
+        있습니다. 또한 Carbon은 야구용품에서 독보적인 위치를 가지고 있는
+        Rawlings의 새로운 글러브 모델인 REV1X에서 엄지손가락과 새끼손가락 주위의
+        패딩을 3D 프린팅으로 제작하였는데요. 이러한 과정을 통해 Carbon은
+        성공적으로 MLB시장에 진출하며 분야를 확장했습니다.</span
       ><br />
 
       <br /><br /><br />
@@ -429,7 +433,7 @@
       <tr>
         <td>
           <img
-            src="https://spobiz.kspo.or.kr/images/newsletter/20231123/sub/KSPO167_1 (1).png"
+            src="https://spobiz.kspo.or.kr/images/newsletter/20231214/sub/KSPO168_1 (1).png"
             alt="1번"
             style="display: block"
             width="750"
@@ -439,7 +443,7 @@
       <tr>
         <td>
           <img
-            src="https://spobiz.kspo.or.kr/images/newsletter/20231123/sub/KSPO167_1 (2).png"
+            src="https://spobiz.kspo.or.kr/images/newsletter/20231214/sub/KSPO168_1 (2).png"
             alt="2번"
             style="display: block"
             width="750"
@@ -449,7 +453,7 @@
       <tr>
         <td>
           <img
-            src="https://spobiz.kspo.or.kr/images/newsletter/20231123/sub/KSPO167_1 (3).png"
+            src="https://spobiz.kspo.or.kr/images/newsletter/20231214/sub/KSPO168_1 (3).png"
             alt="3번"
             style="display: block"
             width="750"
@@ -459,7 +463,7 @@
       <tr>
         <td>
           <img
-            src="https://spobiz.kspo.or.kr/images/newsletter/20231123/sub/KSPO167_1 (4).png"
+            src="https://spobiz.kspo.or.kr/images/newsletter/20231214/sub/KSPO168_1 (4).png"
             alt="4번"
             style="display: block"
             width="750"
@@ -469,7 +473,7 @@
       <tr>
         <td>
           <img
-            src="https://spobiz.kspo.or.kr/images/newsletter/20231123/sub/KSPO167_1 (5).png"
+            src="https://spobiz.kspo.or.kr/images/newsletter/20231214/sub/KSPO168_1 (5).png"
             alt="5번"
             style="display: block"
             width="750"
@@ -479,7 +483,7 @@
       <tr>
         <td>
           <img
-            src="https://spobiz.kspo.or.kr/images/newsletter/20231123/sub/KSPO167_1 (6).png"
+            src="https://spobiz.kspo.or.kr/images/newsletter/20231214/sub/KSPO168_1 (6).png"
             alt="6번"
             style="display: block"
             width="750"
@@ -489,7 +493,7 @@
       <tr>
         <td>
           <img
-            src="https://spobiz.kspo.or.kr/images/newsletter/20231123/sub/KSPO167_1 (7).png"
+            src="https://spobiz.kspo.or.kr/images/newsletter/20231214/sub/KSPO168_1 (7).png"
             alt="7번"
             style="display: block"
             width="750"
@@ -499,7 +503,7 @@
       <tr>
         <td>
           <img
-            src="https://spobiz.kspo.or.kr/images/newsletter/20231123/sub/KSPO167_1 (8).png"
+            src="https://spobiz.kspo.or.kr/images/newsletter/20231214/sub/KSPO168_1 (8).png"
             alt="8번"
             style="display: block"
             width="750"
@@ -509,7 +513,7 @@
       <tr>
         <td>
           <img
-            src="https://spobiz.kspo.or.kr/images/newsletter/20231123/sub/KSPO167_1 (9).png"
+            src="https://spobiz.kspo.or.kr/images/newsletter/20231214/sub/KSPO168_1 (9).png"
             alt="9번"
             style="display: block"
             width="750"
