--- a/public/168_kspo/upload/07.html
+++ b/public/168_kspo/upload/07.html
@@ -2,10 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>
-      KSPO168_5.SI포커스 2022 레저스포츠산업실태조사를 활용한 수상
-      레저스포츠산업 현황 분석
-    </title>
+    <title>KSPO168_7.스낵스포츠</title>
   </head>
 
   <body>
@@ -20,7 +17,7 @@
       <tr>
         <td>
           <img
-            src="https://spobiz.kspo.or.kr/images/newsletter/20231214/sub/KSPO168_5 (1).png"
+            src="../src/sub/KSPO168_7 (1).png"
             alt="1번"
             style="display: block"
             width="750"
@@ -30,7 +27,7 @@
       <tr>
         <td>
           <img
-            src="https://spobiz.kspo.or.kr/images/newsletter/20231214/sub/KSPO168_5 (2).png"
+            src="../src/sub/KSPO168_7 (2).png"
             alt="2번"
             style="display: block"
             width="750"
@@ -40,7 +37,7 @@
       <tr>
         <td>
           <img
-            src="https://spobiz.kspo.or.kr/images/newsletter/20231214/sub/KSPO168_5 (3).png"
+            src="../src/sub/KSPO168_7 (3).png"
             alt="3번"
             style="display: block"
             width="750"
@@ -50,7 +47,7 @@
       <tr>
         <td>
           <img
-            src="https://spobiz.kspo.or.kr/images/newsletter/20231214/sub/KSPO168_5 (4).png"
+            src="../src/sub/KSPO168_7 (4).png"
             alt="4번"
             style="display: block"
             width="750"
@@ -60,7 +57,7 @@
       <tr>
         <td>
           <img
-            src="https://spobiz.kspo.or.kr/images/newsletter/20231214/sub/KSPO168_5 (5).png"
+            src="../src/sub/KSPO168_7 (5).png"
             alt="5번"
             style="display: block"
             width="750"
@@ -70,7 +67,7 @@
       <tr>
         <td>
           <img
-            src="https://spobiz.kspo.or.kr/images/newsletter/20231214/sub/KSPO168_5 (6).png"
+            src="../src/sub/KSPO168_7 (6).png"
             alt="6번"
             style="display: block"
             width="750"
@@ -80,7 +77,7 @@
       <tr>
         <td>
           <img
-            src="https://spobiz.kspo.or.kr/images/newsletter/20231214/sub/KSPO168_5 (7).png"
+            src="../src/sub/KSPO168_7 (7).png"
             alt="7번"
             style="display: block"
             width="750"
@@ -90,18 +87,8 @@
       <tr>
         <td>
           <img
-            src="https://spobiz.kspo.or.kr/images/newsletter/20231214/sub/KSPO168_5 (8).png"
+            src="../src/sub/KSPO168_7 (8).png"
             alt="8번"
-            style="display: block"
-            width="750"
-          />
-        </td>
-      </tr>
-      <tr>
-        <td>
-          <img
-            src="https://spobiz.kspo.or.kr/images/newsletter/20231214/sub/KSPO168_5 (9).png"
-            alt="9번"
             style="display: block"
             width="750"
           />
