--- a/public/168_kspo/upload/04.html
+++ b/public/168_kspo/upload/04.html
@@ -2,7 +2,9 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>KSPO167_4.이슈페이퍼 스포츠 산업에 진심인 아랍</title>
+    <title>
+      KSPO168_4.이슈페이퍼 미국 MLS의 탄생과 미국 축구 산업의 발전 요인 분석
+    </title>
   </head>
 
   <body>
@@ -17,7 +19,7 @@
       <tr>
         <td>
           <img
-            src="https://spobiz.kspo.or.kr/images/newsletter/20231123/sub/KSPO167_4 (1).png"
+            src="https://spobiz.kspo.or.kr/images/newsletter/20231214/sub/KSPO168_4 (1).png"
             alt="1번"
             style="display: block"
             width="750"
@@ -27,7 +29,7 @@
       <tr>
         <td>
           <img
-            src="https://spobiz.kspo.or.kr/images/newsletter/20231123/sub/KSPO167_4 (2).png"
+            src="https://spobiz.kspo.or.kr/images/newsletter/20231214/sub/KSPO168_4 (2).png"
             alt="2번"
             style="display: block"
             width="750"
@@ -37,7 +39,7 @@
       <tr>
         <td>
           <img
-            src="https://spobiz.kspo.or.kr/images/newsletter/20231123/sub/KSPO167_4 (3).png"
+            src="https://spobiz.kspo.or.kr/images/newsletter/20231214/sub/KSPO168_4 (3).png"
             alt="3번"
             style="display: block"
             width="750"
@@ -47,7 +49,7 @@
       <tr>
         <td>
           <img
-            src="https://spobiz.kspo.or.kr/images/newsletter/20231123/sub/KSPO167_4 (4).png"
+            src="https://spobiz.kspo.or.kr/images/newsletter/20231214/sub/KSPO168_4 (4).png"
             alt="4번"
             style="display: block"
             width="750"
@@ -57,7 +59,7 @@
       <tr>
         <td>
           <img
-            src="https://spobiz.kspo.or.kr/images/newsletter/20231123/sub/KSPO167_4 (5).png"
+            src="https://spobiz.kspo.or.kr/images/newsletter/20231214/sub/KSPO168_4 (5).png"
             alt="5번"
             style="display: block"
             width="750"
@@ -67,7 +69,7 @@
       <tr>
         <td>
           <img
-            src="https://spobiz.kspo.or.kr/images/newsletter/20231123/sub/KSPO167_4 (6).png"
+            src="https://spobiz.kspo.or.kr/images/newsletter/20231214/sub/KSPO168_4 (6).png"
             alt="6번"
             style="display: block"
             width="750"
@@ -77,7 +79,7 @@
       <tr>
         <td>
           <img
-            src="https://spobiz.kspo.or.kr/images/newsletter/20231123/sub/KSPO167_4 (7).png"
+            src="https://spobiz.kspo.or.kr/images/newsletter/20231214/sub/KSPO168_4 (7).png"
             alt="7번"
             style="display: block"
             width="750"
@@ -87,7 +89,7 @@
       <tr>
         <td>
           <img
-            src="https://spobiz.kspo.or.kr/images/newsletter/20231123/sub/KSPO167_4 (8).png"
+            src="https://spobiz.kspo.or.kr/images/newsletter/20231214/sub/KSPO168_4 (8).png"
             alt="8번"
             style="display: block"
             width="750"
@@ -97,7 +99,7 @@
       <tr>
         <td>
           <img
-            src="https://spobiz.kspo.or.kr/images/newsletter/20231123/sub/KSPO167_4 (9).png"
+            src="https://spobiz.kspo.or.kr/images/newsletter/20231214/sub/KSPO168_4 (9).png"
             alt="9번"
             style="display: block"
             width="750"
@@ -107,7 +109,7 @@
       <tr>
         <td>
           <img
-            src="https://spobiz.kspo.or.kr/images/newsletter/20231123/sub/KSPO167_4 (10).png"
+            src="https://spobiz.kspo.or.kr/images/newsletter/20231214/sub/KSPO168_4 (10).png"
             alt="10번"
             style="display: block"
             width="750"
