--- a/public/168_kspo/upload/06.html
+++ b/public/168_kspo/upload/06.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>KSPO167_6.콘퍼런스&박람회</title>
+    <title>KSPO168_6.콘퍼런스&박람회</title>
   </head>
 
   <body>
@@ -17,7 +17,7 @@
       <tr>
         <td>
           <img
-            src="https://spobiz.kspo.or.kr/images/newsletter/20231123/sub/KSPO167_6 (1).png"
+            src="https://spobiz.kspo.or.kr/images/newsletter/20231214/sub/KSPO168_6 (1).png"
             alt="1번"
             style="display: block"
             width="750"
@@ -26,9 +26,12 @@
       </tr>
       <tr>
         <td>
-          <a href="http://worldfootballfestival.com/" target="_blank">
+          <a
+            href="https://www.dong-afairs.co.kr/02_sub/2c_sub01.php?p_idx=270"
+            target="_blank"
+          >
             <img
-              src="https://spobiz.kspo.or.kr/images/newsletter/20231123/sub/KSPO167_6 (2).png"
+              src="https://spobiz.kspo.or.kr/images/newsletter/20231214/sub/KSPO168_6 (2).png"
               alt="2번"
               style="display: block"
               width="750"
@@ -38,9 +41,12 @@
       </tr>
       <tr>
         <td>
-          <a href=" http://www.ktechshow.or.kr/" target="_blank">
+          <a
+            href="https://www.dong-afairs.co.kr/02_sub/2c_sub01.php?p_idx=272"
+            target="_blank"
+          >
             <img
-              src="https://spobiz.kspo.or.kr/images/newsletter/20231123/sub/KSPO167_6 (3).png"
+              src="https://spobiz.kspo.or.kr/images/newsletter/20231214/sub/KSPO168_6 (3).png"
               alt="3번"
               style="display: block"
               width="750"
@@ -50,9 +56,9 @@
       </tr>
       <tr>
         <td>
-          <a href="https://www.suwonmegashow.co.kr/" target="_blank">
+          <a href="https://www.spoex.com/" target="_blank">
             <img
-              src="https://spobiz.kspo.or.kr/images/newsletter/20231123/sub/KSPO167_6 (4).png"
+              src="https://spobiz.kspo.or.kr/images/newsletter/20231214/sub/KSPO168_6 (4).png"
               alt="4번"
               style="display: block"
               width="750"
@@ -62,10 +68,34 @@
       </tr>
       <tr>
         <td>
-          <a href="http://www.ispo.com/" target="_blank">
+          <a href="https://www.btme.org.uk/" target="_blank">
             <img
-              src="https://spobiz.kspo.or.kr/images/newsletter/20231123/sub/KSPO167_6 (5).png"
+              src="https://spobiz.kspo.or.kr/images/newsletter/20231214/sub/KSPO168_6 (5).png"
               alt="5번"
+              style="display: block"
+              width="750"
+            />
+          </a>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <a href="https://www.spatex.co.uk/contact" target="_blank">
+            <img
+              src="https://spobiz.kspo.or.kr/images/newsletter/20231214/sub/KSPO168_6 (6).png"
+              alt="6번"
+              style="display: block"
+              width="750"
+            />
+          </a>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <a href="https://www.shootingshow.co.uk" target="_blank">
+            <img
+              src="https://spobiz.kspo.or.kr/images/newsletter/20231214/sub/KSPO168_6 (7).png"
+              alt="7번"
               style="display: block"
               width="750"
             />
