--- a/public/168_kspo/main copy.html
+++ b/public/168_kspo/main copy.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>KSPO 167 뉴스레터</title>
+    <title>KSPO 168 뉴스레터</title>
   </head>
 
   <body>
@@ -35,7 +35,7 @@
               alt=""
               title=""
               coords="275,356,457,409"
-              href="card/01.html"
+              href="https://spobiz.kspo.or.kr/front/www/trend/view.do?board_id=30002&topMenuSeq=3&notice_seq=4580"
               target="_blank"
             />
             <area
@@ -43,7 +43,7 @@
               alt="스포츠굿즈서비스"
               title=""
               coords="45,826,121,868"
-              href="card/02.html"
+              href="https://spobiz.kspo.or.kr/front/www/trend/view.do?board_id=30002&topMenuSeq=3&notice_seq=4581"
               target="_blank"
             />
             <area
@@ -51,7 +51,7 @@
               alt="*"
               title="선도기업 성과사례"
               coords="356,1260,442,1301"
-              href="card/03.html"
+              href="https://spobiz.kspo.or.kr/front/www/trend/view.do?board_id=30002&topMenuSeq=3&notice_seq=4582"
               target="_blank"
             />
             <area
@@ -59,7 +59,7 @@
               alt="*"
               title="이슈페이퍼"
               coords="486,1653,567,1695"
-              href="card/04.html"
+              href="https://www.sports.re.kr/front/spobiz/spobizContents_view.do?menu_seq=993&pageNo=1&boardCode=IS&noticeSeq=4554&keyKind=ALL&keyWord="
               target="_blank"
             />
             <area
@@ -67,7 +67,7 @@
               alt="*"
               title="SI포커스"
               coords="50,2126,132,2166"
-              href="card/05.html"
+              href="https://www.sports.re.kr/front/spobiz/spobizContents_view.do?menu_seq=991&pageNo=1&keyKind=&boardCode=SI&noticeSeq=4553&keyWord="
               target="_blank"
             />
             <area
@@ -75,7 +75,7 @@
               alt="*"
               title=""
               coords="402,2583,482,2614"
-              href="card/06.html"
+              href="https://spobiz.kspo.or.kr/front/www/trend/view.do?board_id=30002&topMenuSeq=3&notice_seq=4583"
               target="_blank"
             />
             <area
