--- a/public/170_kspo/main.html
+++ b/public/170_kspo/main.html
@@ -108,7 +108,7 @@
               alt="스낵스포츠"
               title=""
               coords="43,3056,216,3108"
-              href="card/08.html"
+              href="https://www.instagram.com/p/C8rbQH6vS0Q/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA=="
               target="_blank"
             />
           </map>
