170 kspo card 수정

--- a/public/170_kspo/card/08.html
+++ b/public/170_kspo/card/08.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>KSPO_169 08 snack 글로벌 미국</title>
+    <title>KSPO_169 08_snack 글로벌 미국</title>
   </head>
 
   <body>
@@ -17,7 +17,7 @@
       <tr>
         <td>
           <img
-            src="https://spobiz.kspo.or.kr/images/newsletter/20240624/sub/08 snack/snack01.jpg"
+            src="https://godjewel.co.kr/170_kspo/src/08_snack/snack01.jpg"
             alt="1번"
             style="display: block"
             width="750"
@@ -38,7 +38,7 @@
       <tr>
         <td>
           <img
-            src="https://spobiz.kspo.or.kr/images/newsletter/20240624/sub/08 snack/snack02.jpg"
+            src="https://godjewel.co.kr/170_kspo/src/08_snack/snack02.jpg"
             alt="1번"
             style="display: block"
             width="750"
@@ -59,7 +59,7 @@
       <tr>
         <td>
           <img
-            src="https://spobiz.kspo.or.kr/images/newsletter/20240624/sub/08 snack/snack03.jpg"
+            src="https://godjewel.co.kr/170_kspo/src/08_snack/snack03.jpg"
             alt="1번"
             style="display: block"
             width="750"
@@ -80,7 +80,7 @@
       <tr>
         <td>
           <img
-            src="https://spobiz.kspo.or.kr/images/newsletter/20240624/sub/08 snack/snack04.jpg"
+            src="https://godjewel.co.kr/170_kspo/src/08_snack/snack04.jpg"
             alt="1번"
             style="display: block"
             width="750"
@@ -101,7 +101,7 @@
       <tr>
         <td>
           <img
-            src="https://spobiz.kspo.or.kr/images/newsletter/20240624/sub/08 snack/snack05.jpg"
+            src="https://godjewel.co.kr/170_kspo/src/08_snack/snack05.jpg"
             alt="1번"
             style="display: block"
             width="750"
@@ -122,7 +122,7 @@
       <tr>
         <td>
           <img
-            src="https://spobiz.kspo.or.kr/images/newsletter/20240624/sub/08 snack/snack06.jpg"
+            src="https://godjewel.co.kr/170_kspo/src/08_snack/snack06.jpg"
             alt="1번"
             style="display: block"
             width="750"
@@ -143,7 +143,7 @@
       <tr>
         <td>
           <img
-            src="https ://spobiz.kspo.or.kr/images/newsletter/20240624/sub/08 snack/snack07.jpg"
+            src="https://godjewel.co.kr/170_kspo/src/08_snack/snack07.jpg"
             alt="1번"
             style="display: block"
             width="750"
@@ -164,7 +164,7 @@
       <tr>
         <td>
           <img
-            src="https://spobiz.kspo.or.kr/images/newsletter/20240624/sub/08 snack/snack08.jpg"
+            src="https://godjewel.co.kr/170_kspo/src/08_snack/snack08.jpg"
             alt="1번"
             style="display: block"
             width="750"
@@ -185,7 +185,7 @@
       <tr>
         <td>
           <img
-            src="https://spobiz.kspo.or.kr/images/newsletter/20240624/sub/08 snack/snack09.jpg"
+            src="https://godjewel.co.kr/170_kspo/src/08_snack/snack09.jpg"
             alt="1번"
             style="display: block"
             width="750"
