[kspo171] edit links

--- a/public/171_kspo/card/01.html
+++ b/public/171_kspo/card/01.html
@@ -16,8 +16,9 @@
     >
       <tr>
         <td>
+          <!-- "https://spobiz.kspo.or.kr/images/newsletter/20240624/sub/01_main/main01.jpg" -->
           <img
-            src="../src/01_main/main01.jpg"
+            src="https://spobiz.kspo.or.kr/images/newsletter/20240724/sub/01_main/main01.jpg"
             alt="1번"
             style="display: block"
             width="750"
@@ -38,7 +39,7 @@
       <tr>
         <td>
           <img
-            src="../src/01_main/main02.jpg"
+            src="https://spobiz.kspo.or.kr/images/newsletter/20240724/sub/01_main/main02.jpg"
             alt="1번"
             style="display: block"
             width="750"
@@ -59,7 +60,7 @@
       <tr>
         <td>
           <img
-            src="../src/01_main/main03.jpg"
+            src="https://spobiz.kspo.or.kr/images/newsletter/20240724/sub/01_main/main03.jpg"
             alt="1번"
             style="display: block"
             width="750"
@@ -80,7 +81,7 @@
       <tr>
         <td>
           <img
-            src="../src/01_main/main04.jpg"
+            src="https://spobiz.kspo.or.kr/images/newsletter/20240724/sub/01_main/main04.jpg"
             alt="1번"
             style="display: block"
             width="750"
@@ -101,7 +102,7 @@
       <tr>
         <td>
           <img
-            src="../src/01_main/main05.jpg"
+            src="https://spobiz.kspo.or.kr/images/newsletter/20240724/sub/01_main/main05.jpg"
             alt="1번"
             style="display: block"
             width="750"
@@ -122,7 +123,7 @@
       <tr>
         <td>
           <img
-            src="../src/01_main/main06.jpg"
+            src="https://spobiz.kspo.or.kr/images/newsletter/20240724/sub/01_main/main06.jpg"
             alt="1번"
             style="display: block"
             width="750"
@@ -143,7 +144,7 @@
       <tr>
         <td>
           <img
-            src="../src/01_main/main07.jpg"
+            src="https://spobiz.kspo.or.kr/images/newsletter/20240724/sub/01_main/main07.jpg"
             alt="1번"
             style="display: block"
             width="750"
@@ -164,7 +165,7 @@
       <tr>
         <td>
           <img
-            src="../src/01_main/main08.jpg"
+            src="https://spobiz.kspo.or.kr/images/newsletter/20240724/sub/01_main/main08.jpg"
             alt="1번"
             style="display: block"
             width="750"
@@ -185,7 +186,7 @@
       <tr>
         <td>
           <img
-            src="../src/01_main/main09.jpg"
+            src="https://spobiz.kspo.or.kr/images/newsletter/20240724/sub/01_main/main09.jpg"
             alt="1번"
             style="display: block"
             width="750"
