--- a/public/171_kspo/card/03.html
+++ b/public/171_kspo/card/03.html
@@ -17,7 +17,7 @@
       <tr>
         <td>
           <img
-            src="../src/03_company/company01.jpg"
+            src="https://spobiz.kspo.or.kr/images/newsletter/20240724/sub/03_company/company01.jpg"
             alt="1번"
             style="display: block"
             width="750"
@@ -38,7 +38,7 @@
       <tr>
         <td>
           <img
-            src="../src/03_company/company02.jpg"
+            src="https://spobiz.kspo.or.kr/images/newsletter/20240724/sub/03_company/company02.jpg"
             alt="1번"
             style="display: block"
             width="750"
@@ -59,7 +59,7 @@
       <tr>
         <td>
           <img
-            src="../src/03_company/company03.jpg"
+            src="https://spobiz.kspo.or.kr/images/newsletter/20240724/sub/03_company/company03.jpg"
             alt="1번"
             style="display: block"
             width="750"
@@ -80,7 +80,7 @@
       <tr>
         <td>
           <img
-            src="../src/03_company/company04.jpg"
+            src="https://spobiz.kspo.or.kr/images/newsletter/20240724/sub/03_company/company04.jpg"
             alt="1번"
             style="display: block"
             width="750"
@@ -101,7 +101,7 @@
       <tr>
         <td>
           <img
-            src="../src/03_company/company05.jpg"
+            src="https://spobiz.kspo.or.kr/images/newsletter/20240724/sub/03_company/company05.jpg"
             alt="1번"
             style="display: block"
             width="750"
@@ -122,7 +122,7 @@
       <tr>
         <td>
           <img
-            src="../src/03_company/company06.jpg"
+            src="https://spobiz.kspo.or.kr/images/newsletter/20240724/sub/03_company/company06.jpg"
             alt="1번"
             style="display: block"
             width="750"
@@ -144,7 +144,7 @@
       <tr>
         <td>
           <img
-            src="../src/03_company/company07.jpg"
+            src="https://spobiz.kspo.or.kr/images/newsletter/20240724/sub/03_company/company07.jpg"
             alt="1번"
             style="display: block"
             width="750"
@@ -165,7 +165,7 @@
       <tr>
         <td>
           <img
-            src="../src/03_company/company08.jpg"
+            src="https://spobiz.kspo.or.kr/images/newsletter/20240724/sub/03_company/company08.jpg"
             alt="1번"
             style="display: block"
             width="750"
