--- a/public/171_kspo/card/06.html
+++ b/public/171_kspo/card/06.html
@@ -17,7 +17,7 @@
       <tr>
         <td>
           <img
-            src="../src/06_archive/archive01.jpg"
+            src="https://spobiz.kspo.or.kr/images/newsletter/20240724/sub/06_archive/archive01.jpg"
             alt="1번"
             style="display: block"
             width="750"
