--- a/public/171_kspo/card/02.html
+++ b/public/171_kspo/card/02.html
@@ -17,7 +17,7 @@
       <tr>
         <td>
           <img
-            src="../src/02_goods/goods01.jpg"
+            src="https://spobiz.kspo.or.kr/images/newsletter/20240724/sub/02_goods/goods01.jpg"
             alt="1번"
             style="display: block"
             width="750"
@@ -38,7 +38,7 @@
       <tr>
         <td>
           <img
-            src="../src/02_goods/goods02.jpg"
+            src="https://spobiz.kspo.or.kr/images/newsletter/20240724/sub/02_goods/goods02.jpg"
             alt="1번"
             style="display: block"
             width="750"
@@ -59,7 +59,7 @@
       <tr>
         <td>
           <img
-            src="../src/02_goods/goods03.jpg"
+            src="https://spobiz.kspo.or.kr/images/newsletter/20240724/sub/02_goods/goods03.jpg"
             alt="1번"
             style="display: block"
             width="750"
@@ -80,7 +80,7 @@
       <tr>
         <td>
           <img
-            src="../src/02_goods/goods04.jpg"
+            src="https://spobiz.kspo.or.kr/images/newsletter/20240724/sub/02_goods/goods04.jpg"
             alt="1번"
             style="display: block"
             width="750"
@@ -101,7 +101,7 @@
       <tr>
         <td>
           <img
-            src="../src/02_goods/goods05.jpg"
+            src="https://spobiz.kspo.or.kr/images/newsletter/20240724/sub/02_goods/goods05.jpg"
             alt="1번"
             style="display: block"
             width="750"
@@ -122,7 +122,7 @@
       <tr>
         <td>
           <img
-            src="../src/02_goods/goods06.jpg"
+            src="https://spobiz.kspo.or.kr/images/newsletter/20240724/sub/02_goods/goods06.jpg"
             alt="1번"
             style="display: block"
             width="750"
@@ -143,7 +143,7 @@
       <tr>
         <td>
           <img
-            src="../src/02_goods/goods07.jpg"
+            src="https://spobiz.kspo.or.kr/images/newsletter/20240724/sub/02_goods/goods07.jpg"
             alt="1번"
             style="display: block"
             width="750"
@@ -164,7 +164,7 @@
       <tr>
         <td>
           <img
-            src="../src/02_goods/goods08.jpg"
+            src="https://spobiz.kspo.or.kr/images/newsletter/20240724/sub/02_goods/goods08.jpg"
             alt="1번"
             style="display: block"
             width="750"
@@ -185,7 +185,7 @@
       <tr>
         <td>
           <img
-            src="../src/02_goods/goods09.jpg"
+            src="https://spobiz.kspo.or.kr/images/newsletter/20240724/sub/02_goods/goods09.jpg"
             alt="1번"
             style="display: block"
             width="750"
@@ -206,7 +206,7 @@
       <tr>
         <td>
           <img
-            src="../src/02_goods/goods10.jpg"
+            src="https://spobiz.kspo.or.kr/images/newsletter/20240724/sub/02_goods/goods10.jpg"
             alt="1번"
             style="display: block"
             width="750"
