--- a/public/171_kspo/card/04.html
+++ b/public/171_kspo/card/04.html
@@ -17,7 +17,7 @@
       <tr>
         <td>
           <img
-            src="../src/04_issue/issue01.jpg"
+            src="https://spobiz.kspo.or.kr/images/newsletter/20240724/sub/04_issue/issue01.jpg"
             alt="1번"
             style="display: block"
             width="750"
@@ -38,7 +38,7 @@
       <tr>
         <td>
           <img
-            src="../src/04_issue/issue02.jpg"
+            src="https://spobiz.kspo.or.kr/images/newsletter/20240724/sub/04_issue/issue02.jpg"
             alt="1번"
             style="display: block"
             width="750"
@@ -59,7 +59,7 @@
       <tr>
         <td>
           <img
-            src="../src/04_issue/issue03.jpg"
+            src="https://spobiz.kspo.or.kr/images/newsletter/20240724/sub/04_issue/issue03.jpg"
             alt="1번"
             style="display: block"
             width="750"
@@ -80,7 +80,7 @@
       <tr>
         <td>
           <img
-            src="../src/04_issue/issue04.jpg"
+            src="https://spobiz.kspo.or.kr/images/newsletter/20240724/sub/04_issue/issue04.jpg"
             alt="1번"
             style="display: block"
             width="750"
@@ -101,7 +101,7 @@
       <tr>
         <td>
           <img
-            src="../src/04_issue/issue05.jpg"
+            src="https://spobiz.kspo.or.kr/images/newsletter/20240724/sub/04_issue/issue05.jpg"
             alt="1번"
             style="display: block"
             width="750"
@@ -122,7 +122,7 @@
       <tr>
         <td>
           <img
-            src="../src/04_issue/issue06.jpg"
+            src="https://spobiz.kspo.or.kr/images/newsletter/20240724/sub/04_issue/issue06.jpg"
             alt="1번"
             style="display: block"
             width="750"
@@ -143,7 +143,7 @@
       <tr>
         <td>
           <img
-            src="../src/04_issue/issue07.jpg"
+            src="https://spobiz.kspo.or.kr/images/newsletter/20240724/sub/04_issue/issue07.jpg"
             alt="1번"
             style="display: block"
             width="750"
@@ -164,7 +164,7 @@
       <tr>
         <td>
           <img
-            src="../src/04_issue/issue08.jpg"
+            src="https://spobiz.kspo.or.kr/images/newsletter/20240724/sub/04_issue/issue08.jpg"
             alt="1번"
             style="display: block"
             width="750"
@@ -185,7 +185,7 @@
       <tr>
         <td>
           <img
-            src="../src/04_issue/issue09.jpg"
+            src="https://spobiz.kspo.or.kr/images/newsletter/20240724/sub/04_issue/issue09.jpg"
             alt="1번"
             style="display: block"
             width="750"
@@ -206,7 +206,7 @@
       <tr>
         <td>
           <img
-            src="../src/04_issue/issue10.jpg"
+            src="https://spobiz.kspo.or.kr/images/newsletter/20240724/sub/04_issue/issue10.jpg"
             alt="1번"
             style="display: block"
             width="750"
