--- a/public/171_kspo/card/05.html
+++ b/public/171_kspo/card/05.html
@@ -17,7 +17,7 @@
       <tr>
         <td>
           <img
-            src="../src/05_SIfocus/SIfocus01.jpg"
+            src="https://spobiz.kspo.or.kr/images/newsletter/20240724/sub/05_SIfocus/SIfocus01.jpg"
             alt="1번"
             style="display: block"
             width="750"
@@ -38,7 +38,7 @@
       <tr>
         <td>
           <img
-            src="../src/05_SIfocus/SIfocus02.jpg"
+            src="https://spobiz.kspo.or.kr/images/newsletter/20240724/sub/05_SIfocus/SIfocus02.jpg"
             alt="1번"
             style="display: block"
             width="750"
@@ -59,7 +59,7 @@
       <tr>
         <td>
           <img
-            src="../src/05_SIfocus/SIfocus03.jpg"
+            src="https://spobiz.kspo.or.kr/images/newsletter/20240724/sub/05_SIfocus/SIfocus03.jpg"
             alt="1번"
             style="display: block"
             width="750"
@@ -80,7 +80,7 @@
       <tr>
         <td>
           <img
-            src="../src/05_SIfocus/SIfocus04.jpg"
+            src="https://spobiz.kspo.or.kr/images/newsletter/20240724/sub/05_SIfocus/SIfocus04.jpg"
             alt="1번"
             style="display: block"
             width="750"
@@ -101,7 +101,7 @@
       <tr>
         <td>
           <img
-            src="../src/05_SIfocus/SIfocus05.jpg"
+            src="https://spobiz.kspo.or.kr/images/newsletter/20240724/sub/05_SIfocus/SIfocus05.jpg"
             alt="1번"
             style="display: block"
             width="750"
@@ -122,7 +122,7 @@
       <tr>
         <td>
           <img
-            src="../src/05_SIfocus/SIfocus06.jpg"
+            src="https://spobiz.kspo.or.kr/images/newsletter/20240724/sub/05_SIfocus/SIfocus06.jpg"
             alt="1번"
             style="display: block"
             width="750"
@@ -143,7 +143,7 @@
       <tr>
         <td>
           <img
-            src="../src/05_SIfocus/SIfocus07.jpg"
+            src="https://spobiz.kspo.or.kr/images/newsletter/20240724/sub/05_SIfocus/SIfocus07.jpg"
             alt="1번"
             style="display: block"
             width="750"
@@ -164,7 +164,7 @@
       <tr>
         <td>
           <img
-            src="../src/05_SIfocus/SIfocus08.jpg"
+            src="https://spobiz.kspo.or.kr/images/newsletter/20240724/sub/05_SIfocus/SIfocus08.jpg"
             alt="1번"
             style="display: block"
             width="750"
@@ -185,7 +185,7 @@
       <tr>
         <td>
           <img
-            src="../src/05_SIfocus/SIfocus9.jpg"
+            src="https://spobiz.kspo.or.kr/images/newsletter/20240724/sub/05_SIfocus/SIfocus9.jpg"
             alt="1번"
             style="display: block"
             width="750"
@@ -206,7 +206,7 @@
       <tr>
         <td>
           <img
-            src="../src/05_SIfocus/SIfocus10.jpg"
+            src="https://spobiz.kspo.or.kr/images/newsletter/20240724/sub/05_SIfocus/SIfocus10.jpg"
             alt="1번"
             style="display: block"
             width="750"
@@ -227,7 +227,7 @@
       <tr>
         <td>
           <img
-            src="../src/05_SIfocus/SIfocus11.jpg"
+            src="https://spobiz.kspo.or.kr/images/newsletter/20240724/sub/05_SIfocus/SIfocus11.jpg"
             alt="1번"
             style="display: block"
             width="750"
