--- a/public/171_kspo/card/07.html
+++ b/public/171_kspo/card/07.html
@@ -17,7 +17,7 @@
       <tr>
         <td>
           <img
-            src="../src/07_expo/conf01.jpg"
+            src="https://spobiz.kspo.or.kr/images/newsletter/20240724/sub/07_expo/conf01.jpg"
             alt="1번"
             style="display: block"
             width="750"
@@ -38,7 +38,7 @@
       <tr>
         <td>
           <img
-            src="../src/07_expo/conf02.jpg"
+            src="https://spobiz.kspo.or.kr/images/newsletter/20240724/sub/07_expo/conf02.jpg"
             alt="1번"
             style="display: block"
             width="750"
@@ -59,7 +59,7 @@
       <tr>
         <td>
           <img
-            src="../src/07_expo/conf03.jpg"
+            src="https://spobiz.kspo.or.kr/images/newsletter/20240724/sub/07_expo/conf03.jpg"
             alt="1번"
             style="display: block"
             width="750"
@@ -80,7 +80,7 @@
       <tr>
         <td>
           <img
-            src="../src/07_expo/conf04.jpg"
+            src="https://spobiz.kspo.or.kr/images/newsletter/20240724/sub/07_expo/conf04.jpg"
             alt="1번"
             style="display: block"
             width="750"
@@ -101,7 +101,7 @@
       <tr>
         <td>
           <img
-            src="../src/07_expo/conf05.jpg"
+            src="https://spobiz.kspo.or.kr/images/newsletter/20240724/sub/07_expo/conf05.jpg"
             alt="1번"
             style="display: block"
             width="750"
@@ -122,7 +122,7 @@
       <tr>
         <td>
           <img
-            src="../src/07_expo/conf06.jpg"
+            src="https://spobiz.kspo.or.kr/images/newsletter/20240724/sub/07_expo/conf06.jpg"
             alt="1번"
             style="display: block"
             width="750"
@@ -143,7 +143,7 @@
       <tr>
         <td>
           <img
-            src="../src/07_expo/conf07.jpg"
+            src="https://spobiz.kspo.or.kr/images/newsletter/20240724/sub/07_expo/conf07.jpg"
             alt="1번"
             style="display: block"
             width="750"
@@ -164,7 +164,7 @@
       <tr>
         <td>
           <img
-            src="../src/07_expo/conf08.jpg"
+            src="https://spobiz.kspo.or.kr/images/newsletter/20240724/sub/07_expo/conf08.jpg"
             alt="1번"
             style="display: block"
             width="750"
@@ -185,7 +185,7 @@
       <tr>
         <td>
           <img
-            src="../src/07_expo/conf09.jpg"
+            src="https://spobiz.kspo.or.kr/images/newsletter/20240724/sub/07_expo/conf09.jpg"
             alt="1번"
             style="display: block"
             width="750"
@@ -206,7 +206,7 @@
       <tr>
         <td>
           <img
-            src="../src/07_expo/conf10.jpg"
+            src="https://spobiz.kspo.or.kr/images/newsletter/20240724/sub/07_expo/conf10.jpg"
             alt="1번"
             style="display: block"
             width="750"
@@ -227,7 +227,7 @@
       <tr>
         <td>
           <img
-            src="../src/07_expo/conf11.jpg"
+            src="https://spobiz.kspo.or.kr/images/newsletter/20240724/sub/07_expo/conf11.jpg"
             alt="1번"
             style="display: block"
             width="750"
