--- a/public/171_kspo/card/08.html
+++ b/public/171_kspo/card/08.html
@@ -17,7 +17,7 @@
       <tr>
         <td>
           <img
-            src="../src/08_snack/snack01.jpg"
+            src="https://spobiz.kspo.or.kr/images/newsletter/20240724/sub/08_snack/snack01.jpg"
             alt="1번"
             style="display: block"
             width="750"
@@ -38,7 +38,7 @@
       <tr>
         <td>
           <img
-            src="../src/08_snack/snack02.jpg"
+            src="https://spobiz.kspo.or.kr/images/newsletter/20240724/sub/08_snack/snack02.jpg"
             alt="1번"
             style="display: block"
             width="750"
@@ -59,7 +59,7 @@
       <tr>
         <td>
           <img
-            src="../src/08_snack/snack03.jpg"
+            src="https://spobiz.kspo.or.kr/images/newsletter/20240724/sub/08_snack/snack03.jpg"
             alt="1번"
             style="display: block"
             width="750"
@@ -80,7 +80,7 @@
       <tr>
         <td>
           <img
-            src="../src/08_snack/snack04.jpg"
+            src="https://spobiz.kspo.or.kr/images/newsletter/20240724/sub/08_snack/snack04.jpg"
             alt="1번"
             style="display: block"
             width="750"
@@ -101,7 +101,7 @@
       <tr>
         <td>
           <img
-            src="../src/08_snack/snack05.jpg"
+            src="https://spobiz.kspo.or.kr/images/newsletter/20240724/sub/08_snack/snack05.jpg"
             alt="1번"
             style="display: block"
             width="750"
@@ -122,7 +122,7 @@
       <tr>
         <td>
           <img
-            src="../src/08_snack/snack06.jpg"
+            src="https://spobiz.kspo.or.kr/images/newsletter/20240724/sub/08_snack/snack06.jpg"
             alt="1번"
             style="display: block"
             width="750"
@@ -143,7 +143,7 @@
       <tr>
         <td>
           <img
-            src="../src/08_snack/snack07.jpg"
+            src="https://spobiz.kspo.or.kr/images/newsletter/20240724/sub/08_snack/snack07.jpg"
             alt="1번"
             style="display: block"
             width="750"
@@ -164,7 +164,7 @@
       <tr>
         <td>
           <img
-            src="../src/08_snack/snack08.jpg"
+            src="https://spobiz.kspo.or.kr/images/newsletter/20240724/sub/08_snack/snack08.jpg"
             alt="1번"
             style="display: block"
             width="750"
