--- a/public/171_kspo/main.html
+++ b/public/171_kspo/main.html
@@ -14,18 +14,18 @@
       cellspacing="0"
       style="border-collapse: collapse"
     >
-      <!-- ../src/cover01.jpg -->
+      <!-- .https://spobiz.kspo.or.kr/images/newsletter/20240724/cover01.jpg -->
       <tbody>
         <tr>
           <td>
             <img
-              src="./src/cover01.jpg"
+              src="https://godjewel.co.kr/171_kspo/src/cover01.jpg"
               alt="뉴스레터 상단"
               style="display: block"
               width="730"
             />
             <img
-              src="./src/cover02.jpg"
+              src="https://godjewel.co.kr/171_kspo/src/cover02.jpg"
               usemap="#map"
               alt="뉴스레터 하단"
               style="display: block"
@@ -109,7 +109,7 @@
                 alt="스낵스포츠-인스타로 연결"
                 title=""
                 coords="499,3727,668,3786"
-                href="./card/08.html"
+                href="https://www.instagram.com/p/C9_d5TqytOc/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA=="
                 target="_blank"
               />
               <area
@@ -117,7 +117,7 @@
                 alt="이벤트"
                 title=""
                 coords="47,4269,230,4347"
-                href="https://www.instagram.com/p/C8rbQH6vS0Q/?utm_source=ig_web_copy_link&amp;igsh=MzRlODBiNWFlZA=="
+                href="https://www.instagram.com/p/C93tXK3zI6R/?utm_source=ig_web_copy_link"
                 target="_blank"
               />
             </map>
