--- a/public/171_kspo/main.html
+++ b/public/171_kspo/main.html
@@ -37,7 +37,7 @@
                 alt="글로벌 스포츠산업 트렌드 전망"
                 title=""
                 coords="24,203,229,283"
-                href="./card/01.html"
+                href="https://spobiz.kspo.or.kr/front/www/trend/view.do?board_id=30002&topMenuSeq=3&notice_seq=4649"
                 target="_blank"
               />
               <area
@@ -45,7 +45,7 @@
                 alt="스포츠굿즈서비스"
                 title=""
                 coords="33,718,230,787"
-                href="./card/02.html"
+                href="https://spobiz.kspo.or.kr/front/www/trend/view.do?board_id=30002&topMenuSeq=3&notice_seq=4650"
                 target="_blank"
               />
               <area
@@ -53,7 +53,7 @@
                 alt="*"
                 title="선도기업 성과사례"
                 coords="400,1326,604,1412"
-                href="./card/03.html"
+                href="https://spobiz.kspo.or.kr/front/www/trend/view.do?board_id=30002&topMenuSeq=3&notice_seq=4651"
                 target="_blank"
               />
               <area
@@ -85,7 +85,7 @@
                 alt="스포츠컨퍼런스박람회"
                 title=""
                 coords="259,3256,460,3328"
-                href="./card/07.html"
+                href="https://spobiz.kspo.or.kr/front/www/trend/view.do?board_id=30002&topMenuSeq=3&notice_seq=4652"
                 target="_blank"
               />
               <area
