--- a/public/172_kspo/main.html
+++ b/public/172_kspo/main.html
@@ -37,7 +37,7 @@
                 alt="글로벌 스포츠산업 트렌드 전망"
                 title=""
                 coords="24,203,229,283"
-                href="https://spobiz.kspo.or.kr/front/www/trend/view.do?board_id=30002&topMenuSeq=3&notice_seq=4649"
+                href="./card/01.html"
                 target="_blank"
               />
               <area
@@ -45,7 +45,7 @@
                 alt="스포츠굿즈서비스"
                 title=""
                 coords="33,718,230,787"
-                href="https://spobiz.kspo.or.kr/front/www/trend/view.do?board_id=30002&topMenuSeq=3&notice_seq=4650"
+                href="./card/02.html"
                 target="_blank"
               />
               <area
@@ -53,7 +53,7 @@
                 alt="*"
                 title="선도기업 성과사례"
                 coords="400,1326,604,1412"
-                href="https://spobiz.kspo.or.kr/front/www/trend/view.do?board_id=30002&topMenuSeq=3&notice_seq=4651"
+                href="./card/03.html"
                 target="_blank"
               />
               <area
@@ -61,7 +61,7 @@
                 alt="*"
                 title="이슈페이퍼"
                 coords="348,1835,543,1901"
-                href="https://www.sports.re.kr/front/spobiz/spobizContents_view.do?menu_seq=993&pageNo=1&boardCode=IS&noticeSeq=4631&keyKind=ALL&keyWord="
+                href="./card/04.html"
                 target="_blank"
               />
               <area
@@ -69,7 +69,7 @@
                 alt="*"
                 title="SI포커스"
                 coords="200,2100,400,2160"
-                href="https://www.sports.re.kr/front/spobiz/spobizContents_view.do?menu_seq=991&pageNo=1&keyKind=&boardCode=SI&noticeSeq=4630&keyWord="
+                href="./card/05.html"
                 target="_blank"
               />
               <area
@@ -85,7 +85,7 @@
                 alt="스포츠컨퍼런스박람회"
                 title=""
                 coords="259,3256,460,3328"
-                href="https://spobiz.kspo.or.kr/front/www/trend/view.do?board_id=30002&topMenuSeq=3&notice_seq=4652"
+                href="./card/07.html"
                 target="_blank"
               />
               <area
@@ -109,7 +109,7 @@
                 alt="스낵스포츠-인스타로 연결"
                 title=""
                 coords="499,3777,668,3836"
-                href="https://www.instagram.com/p/C9_d5TqytOc/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA=="
+                href="./card/08.html"
                 target="_blank"
               />
             </map>
