--- a/public/172_kspo/main.html
+++ b/public/172_kspo/main.html
@@ -109,7 +109,7 @@
                 alt="스낵스포츠-인스타로 연결"
                 title=""
                 coords="499,3777,668,3836"
-                href="./card/08.html"
+                href="https://www.instagram.com/p/C_JoDFmzNuz/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA=="
                 target="_blank"
               />
             </map>
